--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://cb8cd08efa52.ngrok-free.app
-VITE_WS_URL=`wss://api-enochvip.consumerwellness.org/chats/ws`
+VITE_API_URL=https://api-muneer.marsdevs.com/
+VITE_WS_URL=wss://api-muneer.marsdevs.com/api/v1/chat/agent/ws
