--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
             cd /home/ubuntu/workspace/muneer-poc-FE
             git pull
             sudo docker-compose down
+            sudo docker-compose down -v
+            sudo docker rm -f $(docker ps -aq)  # Remove all stopped containers
+            sudo docker image prune -a -f       # Remove unused images
             sudo docker-compose up -d --build
             sleep 5
             sudo docker ps
