--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
+    "react-pdftotext": "^1.3.4",
     "react-router-dom": "^7.7.1",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-external-links": "^3.0.0",
