--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-pdftotext": "^1.3.4",
     "react-router-dom": "^7.7.1",
     "react-syntax-highlighter": "^15.6.1",
+    "react-toastify": "^11.0.5",
     "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
